fix hamburger menu

--- a/src/content/posts/an-introduction-to-ipfs/index.mdx
+++ b/src/content/posts/an-introduction-to-ipfs/index.mdx
@@ -5,7 +5,7 @@ tags: ["IPFS"]
 ---
 
 import HashTree from "./Hash_Tree.png";
-import IPFSLogo from "./IPFS_logo.png";
+import IPFSLogo from "./IPFS_logo.svg";
 import MetadataOnlyNetwork from "./metadata_only_network.png";
 import NetworkDegree from "./network-degree.png";
 import PeersSubscription from "./peers_subscription.png";
