--- a/src/content/posts/an-introduction-to-ipfs/index.mdx
+++ b/src/content/posts/an-introduction-to-ipfs/index.mdx
@@ -2,6 +2,7 @@
 title: "An Introduction to IPFS"
 date: 2022-02-09T22:32:01+01:00
 tags: ["IPFS"]
+description: "An overview of the InterPlanetary FileSystem"
 ---
 
 import HashTree from "./Hash_Tree.png";
