deps: update astro

--- a/src/content/posts/an-introduction-to-ipfs/index.mdx
+++ b/src/content/posts/an-introduction-to-ipfs/index.mdx
@@ -307,7 +307,7 @@ Peers regularly check their number of full-message peerings (every second by def
 Peers keep track of their connected peer's _subscription lists_.
 
 <BlogImage src={PeersSubscription} alt="Peer subscription tracking example">
-  A peer's vision of its surroundings
+  A peer&apos;s vision of its surroundings
 </BlogImage>
 
 To subscribe to a new topic, a peer grafts its connections with peers who are already subscribed to this topic.
