style: change tag style

--- a/src/content/posts/draft.mdx
+++ b/src/content/posts/draft.mdx
@@ -1,7 +1,7 @@
 ---
 title: "A test post"
 date: 2023-11-06T17:16:03+01:00
-tags: ["WIP"]
+tags: ["WIP", "Test", "YouShouldNotSeeThisInProd"]
 description: "This is meant to be a test"
 draft: true
 ---
