--- a/src/content/posts/an-introduction-to-ipfs/index.mdx
+++ b/src/content/posts/an-introduction-to-ipfs/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: "An Introduction to IPFS"
 date: 2022-02-09
-tags: ["IPFS"]
+tags: ["Network", "DistributedSystems"]
 description: "A vision for the space age's Internet through a decentralized, peer-to-peer and resilient file-sharing protocol."
 katex: true
 ---
